--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
 
-<head>
-    <title>Guess The Word</title>
+ <html>
+
+ <head>
+    <title>The Math Game</title>
+    </head>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -10,32 +12,40 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
 
-    <link rel="stylesheet" type="text/css" href="game.css">
-    <center>
-        <div class="col-lg-4 col-sm-8 col-xs-11 login_div1">
-            <h3>Player 1 login for the game</h3>
-            <label>User Name:</label>
-            <input type="text" id="player1_name_input" class="form-control" placeholder="Player 1 Name">
-            <br>
-        </div>
-        <br>
-        <br>
-
-        <div class="col-lg-4 col-sm-8 col-xs-11 login_div2">
-            <h3>Player 2 login for the game</h3>
-            <label>User Name:</label>
-            <input type="text" id="player2_name_input" class="form-control" placeholder="Player 2 Name">
-            <br>
-        </div>
-        <br>
-        <br>
-        <button style="width:30%" class="btn btn-primary" onclick="addUser()">Log in</button>
-    </center>
-    <script src=" game_login.js ">
-    </script>
-</head>
-
+    <link rel="stylesheet" type="text/css" href="style.css">
 <body>
+  <div class="whole-body">
+
+    <div class="col-lg-4 col-sm-8 col-xs-11 login_div1">
+        <h1>Login</h1>
+        <h2>Player 1</h2>
+        <br>
+        <label>Please enter your username to continue</label>
+        <br>
+        <br>
+        <input type="text" id="player1_name_input" class="form-control" placeholder="Player 1 Name">
+        <br>
+    </div>
+     
+    <div class="col-lg-4 col-sm-8 col-xs-11 login_div2">
+        <h1>Login</h1>
+        <h2>Player 2</h2>
+        <br>
+        <label>Please enter your username to continue</label>
+        <br>
+        <br>
+        <input type="text" id="player2_name_input" class="form-control" placeholder="Player 2 Name">
+        <br>
+    </div>
+    <div id="head-style">Math Quiz</div>
+    <div id="upper-style">
+    </div>
+    <button style="width: 10%" onclick="addUser()" id="buttonn">Log in</button>
+  </div>
+
+
+    <script src=" quiz_game_login.js ">
+    </script>
 
 </body>
 
